Version 2.02.89 - 
==================================
  Remove extra 4kB buffer allocated on stack in print_log().
  Make move_lv_segment non-static function and use dm_list function.
  Pass exclusive LV locks to all nodes in the cluster.
  Improve lvcreate man documentation of the chunksize option.
  Improve man page style for lvcreate.
  Avoid recursive calls to dmeventd in its LVM plugins.
  Log dev name now returned to kernel for registering during cmirror CTR.
  Fix lv_info open_count test for disabled verify_udev_operations (2.02.86).
  Simplify code for lvm worker thread in clvmd.                     
  Use pthread_barrier to synchronize clvmd threads at startup.
  Limit clvmd's thread size to 128KiB.
  Reduce default preallocated stack size to 64KiB.
  Add check for access through NULL pointer when refresh_filter() fails.
  Use pthread condition for SINGLENODE lock implementation.
  Improve backtrace reporting for some dev_manager_ functions.
  Change message severity to log_warn when symlink creation fails.
  Add ability to convert mirror segtype to RAID1 segtype.
  Add ability to convert from linear to RAID1.
  Add ability to extend mirrors with '--nosync' option.
  Fix splitmirror in cluster having different DM/LVM views of storage.
  Fix improper udev settings during suspend/resume for mirror sub-LVs.
  Fix vgsplit when there are mirrors that have mirrored logs.
  Clarify multi-name device filter pattern matching explanation in lvm.conf.
  Introduce lv_send_message and dev_manager_send_message.
  Introduce revert_lv for better pvmove cleanup.
  Replace incomplete pvmove activation failure recovery code with a message.
  Abort if _finish_pvmove suspend_lvs fails instead of cleaning up incompletely.
  Change suspend_lvs to call vg_revert internally.
  Change vg_revert to void and remove superfluous calls after failed vg_commit.
  Use execvp for CLVMD restart to preserve environment settings.
  Restart CLVMD with same cluster manager.